{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "42a7668b-662d-4e26-908f-b7918ae610b1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8c9579a9-1056-476a-845e-73ec4de20a1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "02324914-0e7e-48e7-8d4a-3db35932600a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextAmmo",
                    "type": "Button",
                    "id": "79783e08-32c6-4a03-802a-d9b7ac7c849a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousAmmo",
                    "type": "Button",
                    "id": "edb49bf2-0e2c-44dd-92a7-59dbdd005621",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToSmallWeapons",
                    "type": "Button",
                    "id": "44b34bea-740c-4392-9c31-2cdcd2a16329",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToMediumWeapons",
                    "type": "Button",
                    "id": "c014aa84-f387-4c9b-88d4-e4505a24c990",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToLargeWeapons",
                    "type": "Button",
                    "id": "0fa0376d-a06e-45ba-83a2-7bbe0bb13f8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e03fd642-3d1f-4d35-adf8-5e96fc4a5f57",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ddd382a-fae2-464f-999f-72c95b2d2d7f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "963f7d35-d02b-4228-986b-a2bc1f309bac",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b1064539-da76-44ce-aaa7-eb5935d73e19",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d131c94d-073e-4077-bf09-3a744f6d39d6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "7b9a3f2b-e0f9-43d8-b92c-34948b64a20d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "27c58a9b-491e-4eac-b72f-5c1bbef56699",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "505a29c3-0e26-427c-a9aa-de4be42cbc53",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "140c5f09-941d-4ece-b34b-3a0740febc89",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "29d4c45c-47ef-494b-a601-c3fe5ee6ba53",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "02a30b1b-75a1-4daa-9ef3-909230680c2e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "168ca038-82e0-4d72-9fa4-e0c04a8a99c4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "NextAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5757a0a7-b673-46c4-a68b-242e6890fccb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "PreviousAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7667b78b-8dbd-4f2c-937b-de6d6d062019",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "SwitchToSmallWeapons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21c127ea-9f73-4c41-8ee7-f87ae44961b6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "SwitchToMediumWeapons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25900854-1ccc-4270-a4c8-d385fb620fd2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "SwitchToLargeWeapons",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "a627d8bc-c5d3-46d3-9d23-15159da5e5f7",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "6656d998-066a-41e0-8780-27ec431fa87e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "582bed29-6338-4bee-a1c7-e0729dd5553b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7f09770-e8ab-48f8-8bcf-9fb6dd821784",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd20a1bd-3654-4cd6-ab46-5ae5b2e00046",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and mouse",
            "bindingGroup": "Keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}